// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Comparator Simple Cases > simple add missing property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,5 @@
export interface SimpleInterface {
  existingProp: string;
+
+  newProp: number;
}"
`;

exports[`Comparator Simple Cases > simple array type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string[];
+  existingProp: number[];
}"
`;

exports[`Comparator Simple Cases > simple number, set mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: number;
+  existingProp: Set<number>;
}"
`;

exports[`Comparator Simple Cases > simple remove property 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,4 +1,3 @@
export interface SimpleInterface {
  existingProp: string;
-  newProp: number;
}"
`;

exports[`Comparator Simple Cases > simple set type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: Set<string>;
+  existingProp: Set<number>;
}"
`;

exports[`Comparator Simple Cases > simple string, array mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: string[];
}"
`;

exports[`Comparator Simple Cases > simple type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: number;
}"
`;

exports[`Comparator Simple Cases > simple union type mismatch 1`] = `
"===================================================================
--- a/target.ts
+++ b/target.ts
@@ -1,3 +1,3 @@
export interface SimpleInterface {
-  existingProp: string;
+  existingProp: number | string;
}"
`;
